--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "jvf",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "author": "junhyun",
   "license": "MIT",
+  "scripts": {
+    "dev": "webpack-dev-server",
+    "start": "webpack-dev-server"
+  },
   "dependencies": {
-    "koa": "^2.8.1",
-    "koa-bodyparser": "^4.2.1",
-    "koa-ejs": "^4.2.0",
-    "koa-useragent": "^2.1.3"
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.40.2"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1"
   }
 }
